# portfolio

./: .gitignore  CLAUDE.md  pyproject.toml
src/: CHANGES.md  CLAUDE.md  QUICK_START.md  REBALANCING_VS_OPTIMIZATION_EXPLAINED.md  REFACTORING_SUMMARY.md  RSMC.py  __init__.py  calcWts.py  calc_weights.py.rtf  comparison_config.py  config.py  demo_retirement.py  event_generators.py  example_custom_frequencies.py  example_new_architecture.py  example_simple_mc_portfolio.py  fin_data.py  generate_simulated_params.py  main.py  main_refactored.py  mc_path_generator.py  performance_analysis.py  performance_engine.py  performance_tracker (copy).py.txt  performance_tracker.py  period_manager.py  portfolio.py  portfolio_config.py  portfolio_optimizer.py  portfolio_tracker.py  pyproject.toml  rebalancing_engine.py  rebalancing_strategies.py  rebalancing_triggers.py  rebalancing_visualization.py  retirement_config.py  retirement_engine.py  retirement_visualization.py  run_mc.py  simulated_data_params.py  (+16 more)
src/api/: __init__.py  main.py
src/api/schemas/: __init__.py  config.py  jobs.py  responses.py
src/api/services/: __init__.py  jobs.py  (+1 more)
src/config/: __init__.py  rebalancing_config.py  system_config.py
src/engine/: __init__.py  backtest.py  portfolio.py
src/metrics/: __init__.py  performance.py  risk.py  tracker.py
src/montecarlo/: __init__.py  bootstrap.py  lifecycle.py  path_generator.py
src/strategies/: __init__.py  allocation.py  base.py  registry.py  universal.py
src/visualization/: __init__.py  backtest.py  base.py  comparison.py  heatmaps.py  montecarlo.py
(+46 files in other folders)
