[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.2",
    "ecos>=2.0.14",
    "ipdb>=0.13.13",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyqt5>=5.15.11",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "yf>=0.0.5",
    "yfinance>=0.2.65",
]
